--- a/.github/workflows/conection.-hashicorp.yml
+++ b/.github/workflows/conection.-hashicorp.yml
@@ -13,16 +13,21 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         
-      - name: Set up Vault CLI
-        uses: hashicorp/setup-vault@v1
-        with:
-          vault-version: 1.7.5
+      - name: Install Vault CLI
+        run: |
+          # Descargar y extraer la CLI de Vault
+          wget https://releases.hashicorp.com/vault/1.7.5/vault_1.7.5_linux_amd64.zip
+          unzip vault_1.7.5_linux_amd64.zip
+
+          # Mover la CLI de Vault al directorio de binarios
+          sudo mv vault /usr/local/bin/
           
       - name: Set up Vault token
         env:
           VAULT_TOKEN: ${{ secrets.VAULT_TOKEN }}
         run: |
-          export VAULT_TOKEN=$VAULT_TOKEN
+          echo "$VAULT_TOKEN" > ~/.vault-token
+          chmod 600 ~/.vault-token
           
       - name: Access Vault
         run: |
